revert and fix dowload id
